deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attendee
  labels:
    app: attendee
---
apiVersion: v1
kind: Namespace
metadata:
  name: attendee-webpage-streamer
  labels:
    app: attendee-webpage-streamer
