deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attendee-web
  namespace: attendee
  labels:
    app: attendee
    component: web
  annotations:
    cloud.google.com/backend-config: '{"default": "attendee-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: attendee
    component: web
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
